Fixed image orientation on Production page. Fixed issue with padding-top property and text alignment in Composition page. Settled on using the same font, Arial, Helvetica, sans-serif.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,8 +89,8 @@ h1 {
     background-color: #4b160c;
     background-image: url(../images/compose.jpg);  
     background-blend-mode: soft-light;
-    background-position: center;
-    padding-top: 7em;
+    background-position: top;
+    /* padding-top: 3em; */
 }
 
 .contact-img {
